<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.rabbitb.brook.a34_viewpager.MainActivity">

    <Button
        android:id="@+id/btn_pager_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_pager_adapter"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_pager_title_strip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_pager_title_strip"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pager_adapter"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_pager_tab_strip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_pager_tab_strip"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pager_title_strip" />

    <Button
        android:id="@+id/btn_pager_tab_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_pager_tab_host"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pager_tab_strip"
        tools:ignore="RtlHardcoded"/>
</android.support.constraint.ConstraintLayout>
